# ola

./: .gitignore  .goosehints  .olaHints  CLAUDE.md  Cargo.toml  README.md  financials.csv  sessions.jsonl  test.txt
.claude/: pipingSpec.md  streamNonThink
docs/: piping.md  recursion.md  roadmap.md  settings_example.yaml
feature-specs/: configure.md  olaHints.md
src/: ascii.txt  config.rs  console_utils.rs  lib.rs  main.rs  models.rs  project.rs  prompt.rs  settings.rs
src/api/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/utils/: clipboard.rs  mod.rs  nvim.rs  output.rs  piping.rs
tests/: cli_configure_test.rs  cli_main_test.rs  cli_models_test.rs  cli_non_think_test.rs  cli_prompt_test.rs  cli_session_test.rs  cli_settings_test.rs  cli_test.rs  config_test.rs  mod.rs  project_test.rs  prompt_test.rs  settings_test.rs
tests/common/: mod.rs
