[package]
name = "ola"
version = "0.1.0"
edition = "2021"

[dependencies]
# Clap for parsing CLI arguments
clap = { version = "4.1", features = ["derive"] }

# Dialoguer for user-friendly prompts
dialoguer = "0.10"

# Serde for serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Reqwest for HTTP requests
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }

# Tokio for async runtime (required for reqwest)
tokio = { version = "1", features = ["full"] }

# Anyhow for error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4.39", features = ["serde"] }

# Regex for pattern matching
regex = "1"

# Terminal utilities
atty = "0.2"         # Detect if stdin/stdout is a terminal
indicatif = "0.17"   # Progress indicators
termcolor = "1.4"    # Terminal color support

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Base64 encoding for binary files
base64 = "0.21"

[dev-dependencies]
# Test dependencies
assert_cmd = "2.0"      # For testing CLI applications
predicates = "3.0"      # For making assertions about command output
tempfile = "3.8"        # For creating temporary files/directories
mockito = "1.2"         # For mocking HTTP requests
test-case = "3.3"       # For parameterized tests
